<resources>
    <string name="app_name">Сусев Сергей</string>
    <string name="edit_photo_profile">Изменить фотографию</string>
    <string name="user_dialog_gallery">Загрузить из галлереи</string>
    <string name="user_dialog_camera">Сделать снимок</string>
    <string name="user_dialog_cancel">Отмена</string>
    <string name="user_dialog_title">Изменить фотографию профиля</string>
    <string name="set_photo_from_gallery">Выберете фото</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="mail">E-mail</string>
    <string name="vk">Ссылка в VK</string>
    <string name="git">Репозиторий</string>
    <string name="user_name">Иван Иванов</string>
    <string name="email_hint">E-mail</string>
    <string name="vk_hint">Ссылка в VK</string>
    <string name="repos_hint">Репозиторий</string>
    <string name="about_hint">О себе</string>
    <string name="email_user">mail@mail.mail</string>
    <string name="login_text">ВОЙТИ</string>
    <string name="get_password">Забыли пароль?</string>
    <string name="password_text">Пароль</string>
    <string name="project_text">Проектов</string>
    <string name="write_code_string_text">Написано строк кода</string>
    <string name="rating_text">Рейтинг</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">Мой профиль</string>
    <string name="team">Команда</string>
    <string name="rating">Рейтинг</string>
    <string name="refresh">Обновить</string>
    <string name="exit">Выйти</string>

</resources>
