<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/grey_splash"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/spacing_small_8"
    android:paddingTop="@dimen/spacing_small_8"
    app:layout_behavior="com.softdesign.devintensive.utils.FancyBehavior">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/size_medium_56"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/margin_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="51"
            android:textSize="@dimen/spacing_medial_24"/>

        <TextView
            android:id="@+id/error_two"
            style="@style/margin_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:text="@string/rating_text"/>

    </LinearLayout>

    <View style="@style/divider_vertical"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/size_medium_56"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/margin_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="51"
            android:textSize="@dimen/spacing_medial_24"/>

        <TextView
            android:id="@+id/error"
            style="@style/margin_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:text="@string/write_code_string_text"/>
    </LinearLayout>

    <View style="@style/divider_vertical"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/size_medium_56"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/margin_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="51"
            android:textSize="@dimen/spacing_medial_24"/>

        <TextView
            style="@style/margin_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:text="@string/project_text"/>
    </LinearLayout>
</LinearLayout>