<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:id="@+id/nested_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            style="@style/linear_horizontal_layout">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>
            <LinearLayout
                style="@style/linear_layout">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_text_layout"
                    style="@style/text_edit_text"
                    android:hint="@string/mobile_phone">
                    <EditText
                        android:id="@+id/phone_text"
                        style="@style/text"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/phone_call"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>

        </LinearLayout>

        <View
            style="@style/divider"/>

        <LinearLayout
            style="@style/linear_horizontal_layout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/linear_layout">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mail_text_layout"
                    style="@style/text_edit_text">

                    <EditText
                        android:id="@+id/mail_text"
                        style="@style/text"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/mail_send"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/divider"/>

        <LinearLayout
            style="@style/linear_horizontal_layout">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle"/>
            <LinearLayout
                style="@style/linear_layout">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vk_text_layout"
                    style="@style/text_edit_text">
                    <EditText
                        android:id="@+id/vk_text"
                        style="@style/text"
                        android:hint="@string/vk_hint"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/vk_url"
                style="@style/icon.right"
                android:src="@drawable/ic_remove_red_eye_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/divider"/>

        <LinearLayout
            style="@style/linear_horizontal_layout">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>
            <LinearLayout
                style="@style/linear_layout"
                android:layout_marginRight="0dp">
                <ListView
                    android:id="@+id/repositories_list_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            style="@style/divider"/>

        <LinearLayout
            style="@style/linear_horizontal_layout">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_person_black_24dp"/>
            <LinearLayout
                style="@style/linear_layout">
                <android.support.design.widget.TextInputLayout
                    style="@style/text_edit_text">
                    <EditText
                        android:id="@+id/about_text"
                        style="@style/text"
                        android:hint="@string/about_hint"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
