<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/auth_coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="ContentDescription">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:paddingLeft="@dimen/spacing_larger_72"
        android:paddingRight="@dimen/spacing_larger_72"
        tools:context="com.softdesign.devintensive.ui.activities.LoginActivity">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingTop="@dimen/spacing_medial_24">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/split"
                        android:layout_width="3dp"
                        android:layout_height="@dimen/spacing_medial_24"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/red_login"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/split"
                        android:layout_marginLeft="@dimen/spacing_medial_24"
                        android:layout_marginRight="@dimen/spacing_medial_24"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/login_text"
                        android:textColor="@color/red_login"
                        android:textSize="16sp"/>
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_medial_24"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/mail"
                    android:textColorHint="@color/grey_light">

                    <EditText
                        android:id="@+id/auth_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/grey"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_medial_24"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:fontFamily="sans-serif-condensed"
                    android:textColorHint="@color/grey_light">

                    <EditText
                        android:id="@+id/auth_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/password_text"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_auth"
                    style="@style/AppTheme.Button.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_medial_24"
                    android:minWidth="126dp"
                    android:text="@string/login_text"
                    android:textAllCaps="true"
                    android:theme="@style/AppTheme.Button.Red"/>

                <TextView
                    android:id="@+id/remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:text="@string/get_password"
                    android:textColor="@color/grey_light"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>